raneto/raneto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: raneto
  namespace: default
spec:
  selector:
    app: raneto
  ports:
  - port: 3000
    targetPort: 3000
